Improved message and fetch

--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -61,6 +61,7 @@
     <div class="content">
       <h1>__MSG_confirmTitle__</h1>
       <h2>__MSG_confirmMessage__</h2>
+      <p>__MSG_confirmDescription__</p>
       <button class="buttonBasic red bottomButton" id="clearAllDate">
         <label for="clearPopupFlag">__MSG_confirmYes__</label>
       </button>
